--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -543,3 +543,59 @@
       params:
         variation: 0.250
         volume: -10
+  # Ghost role stuff
+  - type: GhostRole
+    allowMovement: true
+    name: ghost-role-information-explorer-captain-dungeon-name
+    description: ghost-role-information-explorer-captain-dungeon-description
+    rules: ghost-role-information-dungeon-boss-rules
+    raffle:
+      settings: default
+  - type: GhostTakeoverAvailable
+  - type: ActionGun
+    action: ActionSeismicCharge
+    gunProto: SeismicChargeGun
+
+- type: entity
+  id: SeismicChargeGun
+  name: bone spike
+  description: Shoots a short salvo of bone spikes.
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: RechargeBasicEntityAmmo
+    rechargeCooldown: 50
+    rechargeSound:
+      path: /Audio/Animals/space_dragon_roar.ogg
+  - type: BasicEntityAmmoProvider
+    proto: NFBulletSeismicCharge
+    capacity: 1
+    count: 1
+  - type: Gun
+    minAngle: 1
+    maxAngle: 5
+    fireRate: 1
+    selectedMode: FullAuto
+    availableModes:
+      - FullAuto
+    soundGunshot:
+      path: /Audio/Items/bow_pull.ogg
+    soundEmpty: null
+    projectileSpeed: 15
+  - type: UseDelay
+    delay: 50
+
+- type: entity
+  id: ActionSeismicCharge
+  categories: [ HideSpawnMenu ]
+  name: "[color=yellow]Throw Seismic Charge[/color]"
+  description: "Hurls activated seismic charge, that explodes on contact. [color=yellow]50 second cooldown.[/color]"
+  components:
+  - type: WorldTargetAction
+    icon: { sprite : Objects/Weapons/Bombs/seismic.rsi, state: icon }
+    event: !type:ActionGunShootEvent
+    priority: 2
+    checkCanAccess: false
+    range: 0
+    itemIconStyle: BigAction
+  - type: UseDelay
+    delay: 50
