--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_salvage.yml
@@ -38,3 +38,13 @@
   - type: Blueprint
     providedRecipes:
     - ClothingOuterHardsuitMaximPrototype
+
+- type: entity
+  parent: NFBaseBlueprintSalvage
+  id: NFBlueprintEnergyPickaxe
+  name: holopickaxe blueprint
+  description: A blueprint with a schematic of a holopickaxe. It can be inserted into an autolathe or a techfab.
+  components:
+  - type: Blueprint
+    providedRecipes:
+    - NFEnergyPickaxe
