SM->Supermatter, NFSD classes, orders

--- a/Resources/Prototypes/_NF/Shipyard/Nfsd/wendigo.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Nfsd/wendigo.yml
@@ -17,6 +17,8 @@
   group: Security
   access: Sergeant
   shuttlePath: /Maps/_NF/Shuttles/Nfsd/wendigo.yml
+  class:
+  - Pursuit
   engine:
   - Uranium
 
