punk leader ghost role

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -558,14 +558,14 @@
 
 - type: entity
   id: SeismicChargeGun
-  name: bone spike
-  description: Shoots a short salvo of bone spikes.
+  name: seismic charge gun
+  description: Needed to shoot the charge.
   categories: [ HideSpawnMenu ]
   components:
   - type: RechargeBasicEntityAmmo
     rechargeCooldown: 50
     rechargeSound:
-      path: /Audio/Animals/space_dragon_roar.ogg
+      path: /Audio/Weapons/Guns/MagIn/kinetic_reload.ogg
   - type: BasicEntityAmmoProvider
     proto: NFBulletSeismicCharge
     capacity: 1
