Replace airlocks with NFSD variants

--- a/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
@@ -825,7 +825,7 @@ entities:
     - type: Transform
       pos: 0.5,3.5
       parent: 1
-- proto: AirlockExternalGlass
+- proto: AirlockExternalGlassNfsdLocked
   entities:
   - uid: 4
     components:
@@ -847,7 +847,7 @@ entities:
     - type: Transform
       pos: -8.5,1.5
       parent: 1
-- proto: AirlockGlassShuttle
+- proto: AirlockGlassShuttleNfsdLocked
   entities:
   - uid: 8
     components:
