--- a/Resources/Maps/_NF/Shuttles/Nfsd/empress.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/empress.yml
@@ -11613,17 +11613,19 @@ entities:
     - type: Transform
       pos: 0.5,4.5
       parent: 1
-- proto: MedkitCombatFilled
+- proto: MedkitAdvancedFilled
   entities:
-  - uid: 2553
+  - uid: 845
     components:
     - type: Transform
-      pos: -2.5074146,1.5536056
+      pos: 1.5,1.5
       parent: 1
-  - uid: 2554
+- proto: MedkitFilled
+  entities:
+  - uid: 844
     components:
     - type: Transform
-      pos: 1.5238354,1.5536056
+      pos: -2.5,1.5
       parent: 1
 - proto: Morgue
   entities:
