--- a/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/wasp.yml
@@ -1476,13 +1476,6 @@ entities:
       parent: 116
     - type: Physics
       canCollide: False
-- proto: BookChemicalCompendium
-  entities:
-  - uid: 118
-    components:
-    - type: Transform
-      pos: -5.0524554,-4.398542
-      parent: 1
 - proto: BoxBeaker
   entities:
   - uid: 119
@@ -4252,13 +4245,6 @@ entities:
     components:
     - type: Transform
       pos: 2.658847,1.278218
-      parent: 1
-- proto: ClothingEyesGlassesChemical
-  entities:
-  - uid: 648
-    components:
-    - type: Transform
-      pos: -4.5055804,-4.226667
       parent: 1
 - proto: ComfyChair
   entities:
@@ -7946,6 +7932,13 @@ entities:
     - type: Transform
       pos: 7.603577,-5.4169636
       parent: 1
+- proto: HandLabeler
+  entities:
+  - uid: 59
+    components:
+    - type: Transform
+      pos: -5.3707194,-4.4200716
+      parent: 1
 - proto: HighSecArmoryLocked
   entities:
   - uid: 1158
@@ -8324,6 +8317,14 @@ entities:
         - 0
         - 0
         - 0
+- proto: LockerWallColorChemistryFilled
+  entities:
+  - uid: 58
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -2.5,-3.5
+      parent: 1
 - proto: LockerWallMaterialsFuelAmeJarFilled
   entities:
   - uid: 1004
@@ -8370,12 +8371,12 @@ entities:
     - type: Transform
       pos: -9.576968,-5.6438694
       parent: 1
-- proto: MedkitCombatFilled
+- proto: MedkitFilled
   entities:
-  - uid: 1212
+  - uid: 57
     components:
     - type: Transform
-      pos: -6.374452,-8.63802
+      pos: -6.358609,-8.515163
       parent: 1
 - proto: NfsdTechFab
   entities:
