--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -157,6 +157,14 @@
       - ToolboxElectricalNF
       - ToolboxMechanicalNF
       - ToolboxEmergencyNF
+      - NFBoxMREEmpty
+      - NFHappyHonkEmpty
+      - NFHappyHonkMimeEmpty
+      - NFHappyHonkMcCargoEmpty
+      - NFFoodBoxPizza
+      - NFFoodBoxDonutEmpty
+      - NFFoodBoxNuggetEmpty
+      - NFFoodContainerEggEmpty
     ## Basic parts
       - CableStack
       - LightTube
@@ -236,6 +244,7 @@
       - ClothingOuterEVASuitBoxerYellow
     ## Materials
       - SheetPaper
+      - NFMaterialCardboard1Processed
     ## Misc
       - ClothingHeadHatCone
       - FireExtinguisher
@@ -265,6 +274,10 @@
       - SyringeBluespace
       - PlantBagOfHolding
       - PlantAnalyzer
+  - type: EmagLatheRecipes
+    emagStaticRecipes:
+      - NFHappyHonkNukieEmpty
+      - NFHappyHonkCluwneEmpty
 
 - type: entity
   parent: [ BlueprintReceiverBase, BaseLatheLube ]
