--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/mobs_hostile_punkgangers.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/mobs_hostile_punkgangers.yml
@@ -1,6 +1,6 @@
 - type: entity
   name: spawn punk
-  id: SpawnMobPunkMelee
+  id: SpawnMobPunkT1
   parent: MarkerBasePlaceFree
   suffix: AI, Hostile, Melee
   components:
@@ -12,16 +12,18 @@
     - state: ai
   - type: RandomSpawner
     prototypes:
-    - MobPunkGangerMelee
+    - MobPunkGangerMeleeT1
+    - MobPunkGangerMeleeT1
+    - MobPunkGangerPistol
     chance: 1
     offset: 0.0
     rarePrototypes:
-    - MobPunkGangerArmoredMelee
-    rareChance: 0.2
+    - SpawnMobPunkT2
+    rareChance: 0.05
 
 - type: entity
   name: spawn punk
-  id: SpawnMobPunkRanged
+  id: SpawnMobPunkT2
   parent: MarkerBasePlaceFree
   suffix: AI, Hostile, Ranged
   components:
@@ -33,12 +35,37 @@
     - state: ai
   - type: RandomSpawner
     prototypes:
-    - MobPunkGangerPistol
+    - MobPunkGangerMeleeT2
+    - MobPunkGangerMeleeT2
+    - MobPunkGangerShotgun
     chance: 1
     offset: 0.0
     rarePrototypes:
-    - MobPunkGangerShotgun
-    rareChance: 0.1
+    - SpawnMobPunkT3
+    rareChance: 0.05
+
+- type: entity
+  name: spawn punk
+  id: SpawnMobPunkT3
+  parent: MarkerBasePlaceFree
+  suffix: AI, Hostile, Ranged
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Objects/Weapons/Melee/baseball_bat.rsi
+      state: icon
+    - state: ai
+  - type: RandomSpawner
+    prototypes:
+    - MobPunkGangerMeleeT3
+    - MobPunkGangerMeleeT3
+    - MobPunkGangerSmg
+    chance: 1
+    offset: 0.0
+    #rarePrototypes:
+    #- SpawnMobPunkT3
+    #rareChance: 0.05
 
 - type: entity
   name: spawn punk leader
@@ -54,6 +81,6 @@
     - state: ai
   - type: RandomSpawner
     prototypes:
-    - MobPunkGangerArmoredElite
+    - MobPunkGangerLeader
     chance: 1
     offset: 0.0
