--- a/Resources/Prototypes/_NF/Entities/Clothing/Hands/gloves_mob_hostile_npcs.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Hands/gloves_mob_hostile_npcs.yml
@@ -308,17 +308,112 @@
       - sprite: Objects/Weapons/Guns/Battery/advancedlasergun.rsi
         state: inhand-left
 
+# This is some proper cursed stuff: due to layering of clothes sprites, gloves displayed under outer clothes
+# So in order to make wielded weapon visible, I'm using neck slot which is drawn on top of outer suit layer.
 - type: entity
-  parent: ClothingHandsGlovesColorBlackSMG
-  id: ClothingHandsGlovesWeaponDrill
-  name: wielded weapon
-  suffix: mining drill
+  id: PunkHandsGlovesBaseballBat
+  parent: ClothingNeckBase
+  name: punk gloves
+  description: Colorful gloves that do not keep you from frying.
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Unremoveable
+  - type: Sprite
+    sprite: Clothing/Hands/Gloves/Color/color.rsi
+    layers:
+      - state: icon
+        map: [ "gloves_decor" ]
+  - type: Clothing
+    clothingVisuals:
+      neck:
+      # Gloves
+      - sprite: Clothing/Hands/Gloves/Color/color.rsi
+        state: equipped-HAND
+        map: [ "gloves_decor" ]
+      # Weapon
+      - sprite: Objects/Weapons/Melee/baseball_bat.rsi
+        state: wielded-inhand-right
+  - type: RandomSprite
+    available:
+      - gloves_decor:
+          equipped-HAND: CyberpunkNeon
+
+- type: entity
+  id: PunkHandsGlovesFireaxe
+  parent: PunkHandsGlovesBaseballBat
   categories: [ HideSpawnMenu ]
   components:
   - type: Clothing
     clothingVisuals:
-      gloves:
-      - sprite: Objects/Tools/handdrill.rsi
-        state: inhand-right
-      - sprite: Objects/Tools/handdrill.rsi
-        state: inhand-left
+      neck:
+      # Gloves
+      - sprite: Clothing/Hands/Gloves/Color/color.rsi
+        state: equipped-HAND
+        map: [ "gloves_decor" ]
+      # Weapon
+      - sprite: Objects/Weapons/Melee/fireaxe.rsi
+        state: wielded-inhand-right
+
+- type: entity
+  id: PunkHandsGlovesSledgehammer
+  parent: PunkHandsGlovesBaseballBat
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Clothing
+    clothingVisuals:
+      neck:
+      # Gloves
+      - sprite: Clothing/Hands/Gloves/Color/color.rsi
+        state: equipped-HAND
+        map: [ "gloves_decor" ]
+      # Weapon
+      - sprite: Objects/Weapons/Melee/sledgehammer.rsi
+        state: wielded-inhand-right
+
+- type: entity
+  id: PunkHandsGlovesShotgun
+  parent: PunkHandsGlovesBaseballBat
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Clothing
+    clothingVisuals:
+      neck:
+      # Gloves
+      - sprite: Clothing/Hands/Gloves/Color/color.rsi
+        state: equipped-HAND
+        map: [ "gloves_decor" ]
+      # Weapon
+      - sprite: Objects/Weapons/Guns/Shotguns/pump_inhands_64x.rsi
+        state: wielded-inhand-right
+
+- type: entity
+  id: PunkHandsGlovesSmg
+  parent: PunkHandsGlovesBaseballBat
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Clothing
+    clothingVisuals:
+      neck:
+      # Gloves
+      - sprite: Clothing/Hands/Gloves/Color/color.rsi
+        state: equipped-HAND
+        map: [ "gloves_decor" ]
+      # Weapon
+      - sprite: Objects/Weapons/Guns/SMGs/drozd.rsi
+        state: wielded-inhand-right
+
+- type: entity
+  id: PunkHandsGlovesLaserGun
+  parent: PunkHandsGlovesBaseballBat
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Clothing
+    clothingVisuals:
+      neck:
+      # Gloves
+      - sprite: Clothing/Hands/Gloves/Color/color.rsi
+        state: equipped-HAND
+        map: [ "gloves_decor" ]
+      # Weapon
+      - sprite: Objects/Weapons/Guns/Battery/laser_gun.rsi
+        state: wielded-inhand-right
