--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_punkganger.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_punkganger.yml
@@ -1,6 +1,6 @@
 - type: entity # Spawns random graffiti (even if the mob is dead)
-  abstract: true
   id: MobVandalizer
+  abstract: true
   components:
   - type: Timer
   - type: TimedSpawner
@@ -12,18 +12,25 @@
     maximumEntitiesSpawned: 1
 
 - type: entity
+  id: MobPunkBase
   name: punk
   abstract: true
   parent:
+  - BaseC3MobHuman
   - MobHumanoidHostileBase
   - MobVandalizer
-  id: MobPunkBase
+  - MobHumanoidInvetory
   description: |-
    "Criminally-inclined individuals", as NT Security documents call them, these are armed with a variety of weapons. These weapons range from makeshift shivs and machined truncheons to rusty pistols and shotguns. Some may be armored, so plan appropriately.
   components:
+  - type: RandomHumanoidAppearance
+    randomizeName: true
   - type: NpcFactionMember
     factions:
     - StreetGangNF
+  - type: Body
+    prototype: NFHumanNoHands
+    requiredLegs: 2
   - type: MobThresholds
     thresholds:
       0: Alive
@@ -46,8 +53,8 @@
     animation: WeaponArcPunch
     damage:
       types:
-        Slash: 10
-        Structural: 20
+        Blunt: 12
+        Structural: 30
     soundHit:
       path: /Audio/Weapons/bladeslice.ogg
   - type: ReplacementAccent
@@ -60,22 +67,23 @@
   - type: AutoWakeUp
 
 # Humans
+## Tier 1
 - type: entity
+  id: MobPunkGangerMeleeT1
   parent:
   - MobPunkBase
   - MobHumanoidHostileAISimpleMelee
-  id: MobPunkGangerMelee
   categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
-    - PunkGangerGearMelee
+    - PunkGangerGearMeleeT1
 
 - type: entity
+  id: MobPunkGangerPistol
   parent:
   - MobPunkBase
   - MobHumanoidHostileAISimpleRanged
-  id: MobPunkGangerPistol
   categories: [ HideSpawnMenu ]
   components:
   - type: MovementSpeedModifier
@@ -96,11 +104,28 @@
     - FullAuto
     soundGunshot: /Audio/Weapons/Guns/Gunshots/pistol.ogg
 
+## Tier 2
 - type: entity
+  id: MobPunkGangerMeleeT2
+  parent:
+  - MobPunkBase
+  - MobHumanoidHostileAISimpleMelee
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Loadout
+    prototypes:
+    - PunkGangerGearMeleeT2
+  - type: MeleeWeapon
+    damage:
+      types:
+        Blunt: 14
+        Structural: 30
+
+- type: entity
+  id: MobPunkGangerShotgun
   parent:
   - MobPunkBase
   - MobHumanoidHostileAISimpleRanged
-  id: MobPunkGangerShotgun
   categories: [ HideSpawnMenu ]
   components:
   - type: MovementSpeedModifier
@@ -121,25 +146,28 @@
     - FullAuto
     soundGunshot: /Audio/Weapons/Guns/Gunshots/pistol.ogg
 
+## Tier 3
 - type: entity
+  id: MobPunkGangerMeleeT3
   parent:
   - MobPunkBase
   - MobHumanoidHostileAISimpleMelee
-  id: MobPunkGangerArmoredMelee
   categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
-    - PunkGangerArmoredGearMelee
+    - PunkGangerGearMeleeT3
+  - type: MeleeWeapon
+    damage:
+      types:
+        Blunt: 16
+        Structural: 30
 
 - type: entity
   parent:
-  - MobHostileBossBase
   - MobPunkBase
   - MobHumanoidHostileAISimpleRanged
-  id: MobPunkGangerArmoredElite
-  name: punk gang leader
-  description: It takes a formidable figure to lead a pack of street trash. These leaders usually wield scavenged SMGs and wear armor taken from unfortunate security forces. Usually high on meth and booze.
+  id: MobPunkGangerSmg
   categories: [ HideSpawnMenu ]
   components:
   - type: MovementSpeedModifier
@@ -147,7 +175,7 @@
     baseSprintSpeed : 4
   - type: Loadout
     prototypes:
-    - PunkGangerArmoredEliteGear
+    - PunkGangerGearSmg
   - type: BasicEntityAmmoProvider
     proto: BulletPistol
     capacity: 6
@@ -163,6 +191,42 @@
     availableModes:
     - FullAuto
     soundGunshot: /Audio/Weapons/Guns/Gunshots/smg.ogg
+
+## Tier 4 - Dungeon boss
+- type: entity
+  parent:
+  - MobHostileBossBase
+  - MobPunkBase
+  - MobHumanoidHostileAISimpleRanged
+  id: MobPunkGangerLeader
+  name: punk gang leader
+  description: It takes a formidable figure to lead a pack of street trash. These leaders usually wield scavenged SMGs and wear armor taken from unfortunate security forces. Usually high on meth and booze.
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
+  - type: Loadout
+    prototypes:
+    - PunkGangerGearLaser
+  - type: HitscanBatteryAmmoProvider
+    proto: RedLaser
+    fireCost: 100
+  - type: BatterySelfRecharger
+    autoRecharge: true
+    autoRechargeRate: 50
+  - type: Battery
+    maxCharge: 600
+    startingCharge: 600
+  - type: Gun
+    showExamineText: false
+    fireRate: 1
+    minAngle: 5
+    maxAngle: 10
+    selectedMode: SemiAuto
+    availableModes:
+    - SemiAuto
+    soundGunshot: /Audio/Weapons/Guns/Gunshots/laser_cannon.ogg
   - type: Jittering
   # Ghost role stuff
   - type: GhostRole
