--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/mobs_hostile_punkgangers.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/mobs_hostile_punkgangers.yml
@@ -2,7 +2,7 @@
   name: spawn punk
   id: SpawnMobPunkT1
   parent: MarkerBasePlaceFree
-  suffix: AI, Hostile, Melee
+  suffix: AI, Hostile, T1
   components:
   - type: Sprite
     layers:
@@ -25,7 +25,7 @@
   name: spawn punk
   id: SpawnMobPunkT2
   parent: MarkerBasePlaceFree
-  suffix: AI, Hostile, Ranged
+  suffix: AI, Hostile, T2
   components:
   - type: Sprite
     layers:
@@ -48,7 +48,7 @@
   name: spawn punk
   id: SpawnMobPunkT3
   parent: MarkerBasePlaceFree
-  suffix: AI, Hostile, Ranged
+  suffix: AI, Hostile, T3
   components:
   - type: Sprite
     layers:
