--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -301,7 +301,7 @@
     drawdepth: Mobs
     layers:
     # Helmet
-    - sprite: Clothing\Head\Hardsuits\salvage.rsi
+    - sprite: Clothing/Head/Hardsuits/salvage.rsi
       state: on-equipped-HELMET
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
       state: equipped-head-light
@@ -364,7 +364,7 @@
       shader: unshaded
       color: "#47f8ff"
     # Suit
-    - sprite: Clothing\OuterClothing\Hardsuits\luxury.rsi
+    - sprite: Clothing/OuterClothing/Hardsuits/luxury.rsi
       state: equipped-OUTERCLOTHING
     # Weapons
     - sprite: Objects/Weapons/Guns/Basic/kinetic_accelerator.rsi
@@ -506,7 +506,7 @@
       shader: unshaded
       color: "#47f8ff"
     # Suit
-    - sprite: _NF\Clothing\OuterClothing\Hardsuits\maxim_prototype.rsi
+    - sprite: _NF/Clothing/OuterClothing/Hardsuits/maxim_prototype.rsi
       state: equipped-OUTERCLOTHING
     # Weapons
     - sprite: _NF/Objects/Weapons/Melee/energy_pickaxe.rsi
