Honey changes intial

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/ingredients.yml
@@ -219,9 +219,58 @@
   metabolisms:
     Food:
       effects:
-      - !type:SatiateHunger 
+      - !type:SatiateHunger
         conditions:
         - !type:ReagentThreshold
           reagent: Nutriment
           min: 0.1
         factor: 1
+
+- type: reagent
+  id: Honey
+  name: reagent-name-honey
+  group: Foods
+  desc: reagent-desc-honey
+  physicalDesc: reagent-physical-desc-gloopy
+  flavor: honey
+  flavorMinimum: 0.05
+  color: "#E79A3F"
+  meltingPoint: -6.0 #Taken from OilOlive
+  boilingPoint: 299.0
+  viscosity: 0.5
+  recognizable: true
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateHunger
+        conditions:
+        - !type:ReagentThreshold
+          reagent: Nutriment
+          min: 0.1
+        factor: 1
+  footstepSound:
+    collection: FootstepSticky
+    params:
+      volume: 6
+
+- type: entity
+  parent: [ReagentPacketBase, ItemHeftyBase]
+  id: ReagentContainerHoney
+  name: honey container
+  description: A big container of honey. Great for sweeting your day!
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Consumable/Food/ingredients.rsi
+    state: honeybottle
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 100
+        reagents:
+        - ReagentId: Honey
+          Quantity: 100
+  - type: Drink
+    solution: food
+    useSound:
+      path: /Audio/Items/eating_1.ogg
+
