--- a/Resources/Prototypes/_NF/Flavors/flavors.yml
+++ b/Resources/Prototypes/_NF/Flavors/flavors.yml
@@ -42,3 +42,13 @@
   id: pear
   flavorType: Complex
   description: flavor-complex-pear
+
+- type: flavor
+  id: honeycomb
+  flavorType: Complex
+  description: flavor-complex-honeycomb
+
+- type: flavor
+  id: honey
+  flavorType: Complex
+  description: flavor-complex-bee-honey
