--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -166,7 +166,7 @@
     FoodCucumber: 1
   reagents:
     Saline: 10
-    
+
 - type: microwaveMealRecipe
   id: RecipePoachedPears
   name: poached pears recipe
@@ -178,7 +178,7 @@
     FoodOrange: 2
   reagents:
     Wine: 10
-    
+
 - type: microwaveMealRecipe
   id: RecipePearsBelleHelene
   name: pears belle helene recipe
@@ -204,7 +204,7 @@
     Flour: 5
     Oats: 5
     Sugar: 5
-    
+
 - type: microwaveMealRecipe
   id: RecipePearCheeseTart
   name: pear and cheese tart recipe
@@ -215,6 +215,50 @@
     FoodDoughPie: 1
     FoodPear: 2
     FoodChevre: 1
+
+- type: microwaveMealRecipe
+  id: RecipeHoneyBun
+  name: honey and bun recipe
+  result: FoodBakedBunHoney
+  time: 5
+  solids:
+    FoodBreadBun: 1
+  reagents:
+    Honey: 5
+
+- type: microwaveMealRecipe
+  id: RecipeHoneyChallah
+  name: honey challah recipe
+  result: FoodHoneyChallah
+  time: 15
+  solids:
+    FoodDoughRope: 3
+    PoppySeeds: 1
+  reagents:
+    Honey: 10
+
+- type: microwaveMealRecipe
+  id: RecipeGlazedHam
+  name: honey and ham recipe
+  result: FoodGlazedHam
+  time: 15
+  solids:
+    FoodMeat: 2
+  reagents:
+    Honey: 10
+    TableSalt: 5
+
+- type: microwaveMealRecipe
+  id: RecipeAppleHoneyDutchBaby
+  name: honey and apple recipe
+  result: FoodAppleHoneyDutchBaby
+  time: 15
+  solids:
+    FoodPlateTin: 1
+    FoodDoughPie: 1
+    FoodApple: 2
+  reagents:
+    Honey: 10
 
 # NOT ACTUAL FOOD
 
