--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/produce.yml
@@ -261,3 +261,34 @@
     tags:
       - Vegetable
       - Slice
+
+- type: entity
+  name: honeycomb
+  parent: FoodProduceBase
+  id: FoodHoneyComb
+  description: Crispy container of honey
+  components:
+  - type: FlavorProfile
+    flavors:
+      - honeycomb
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 20
+        reagents:
+        - ReagentId: Nutriment #place holder
+          Quantity: 6
+        - ReagentId: Vitamin
+          Quantity: 4
+  - type: Sprite
+    sprite: _NF/Objects/Specific/Hydroponics/bees.rsi
+    state: produce
+  - type: Extractable
+    grindableSolutionName: food
+    juiceSolution:
+      reagents:
+      - ReagentId: Honey
+        Quantity: 5
+  - type: Tag
+    tags:
+      - Vegetable
