--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -30,7 +30,7 @@
       seedId: coffee
     - type: Sprite
       sprite: _NF/Objects/Specific/Hydroponics/coffee.rsi
-            
+
 - type: entity
   parent: SeedBase
   name: packet of avocado seeds
@@ -134,7 +134,7 @@
   plantRsi: _NF/Objects/Specific/Hydroponics/avocado.rsi
   packetPrototype: AvocadoSeeds
   productPrototypes:
-    - FoodAvocado    
+    - FoodAvocado
   lifespan: 55
   maturation: 6
   production: 6
@@ -169,6 +169,43 @@
   yield: 4
   potency: 10
   growthStages: 5
+  chemicals:
+    Nutriment:
+      Min: 1
+      Max: 10
+      PotencyDivisor: 10
+    Vitamin:
+      Min: 1
+      Max: 4
+      PotencyDivisor: 25
+
+- type: entity
+  parent: SeedBase
+  name: packet of bees
+  description: Starter kit for a new apiarist
+  id: BeesSeeds
+  components:
+    - type: Seed
+      seedId: bees
+    - type: Sprite
+      sprite: _NF/Objects/Specific/Hydroponics/bees.rsi
+
+- type: seed
+  id: bees
+  name: seeds-bees-name
+  noun: seeds-noun-seeds
+  displayName: seeds-bees-display-name
+  plantRsi: _NF/Objects/Specific/Hydroponics/bees.rsi
+  packetPrototype: BeesSeeds
+  productPrototypes:
+    - FoodHoneyComb
+  lifespan: 60
+  maturation: 7
+  production: 5
+  yield: 4
+  potency: 10
+  growthStages: 4
+  harvestRepeat: Repeat
   chemicals:
     Nutriment:
       Min: 1
