Extends Halloween, pushes back Festive Season.

--- a/Resources/Prototypes/holidays.yml
+++ b/Resources/Prototypes/holidays.yml
@@ -324,8 +324,10 @@
 - type: holiday
   id: Halloween
   name: holiday-name-halloween
-  beginDay: 31
+  beginDay: 27
   beginMonth: October
+  endday: 2
+  endMonth: November
   greet:
     !type:Custom
     text: holiday-custom-halloween
@@ -424,7 +426,7 @@
 - type: holiday
   id: FestiveSeason
   name: holiday-name-festive-season
-  beginDay: 1
+  beginDay: 3
   endDay: 31
   beginMonth: November
   endMonth: December
