--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
@@ -208,7 +208,7 @@
     state: service
   - type: MachineBoard
     prototype: Biogenerator
-    stackRequirements:
+    requirements:
       MatterBin: 2
     tagRequirements:
       GlassBeaker:
@@ -1329,8 +1329,9 @@
   components:
   - type: MachineBoard
     prototype: CutterMachine
-    stackRequirements:
-      Steel: 2
+    requirements:
       Capacitor: 1
       Manipulator: 1
+    stackRequirements:
+      Steel: 2
       Cable: 1
