--- a/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
@@ -89,6 +89,8 @@
       icon:
         sprite: Structures/Doors/Airlocks/Standard/security.rsi
         state: closed
+      disposable: true # Frontier
+      autoInstall: true # Frontier
     - type: LogProbeCartridge
     - type: GuideHelp
       guides:
