--- a/Resources/Prototypes/_NF/Shipyard/liquidator.yml
+++ b/Resources/Prototypes/_NF/Shipyard/liquidator.yml
@@ -11,8 +11,8 @@
 - type: vessel
   id: Liquidator
   name: LVHI Liquidator
-  description: A small vessel equipped with everything you need to make even the dirtiest ship squeaky clean (ducky slippers included). Manufactured by Langstad-Voigt Heavy Industries.
-  price: 27300 # ~23800$ on mapinit + 3500$ from 15% markup
+  description: A small shipbreaker/salvage vessel equipped with everything a small crew need for extended work shift in deep space. Manufactured by Langstad-Voigt Heavy Industries.
+  price: 28700 # ~24915$ on mapinit + ~3740$ from 15% markup
   category: Small
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/liquidator.yml
