--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shuttle_records.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shuttle_records.yml
@@ -38,6 +38,8 @@
   - type: ContainerContainer
     containers:
       ShuttleRecordsConsole-targetId: !type:ContainerSlot {}
+  - type: AccessReader
+    access: [[ "HeadOfPersonnel" ]]
 
 # Concrete consoles
 - type: entity
