--- a/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
@@ -91,6 +91,7 @@
         state: closed
       disposable: true # Frontier
       autoInstall: true # Frontier
+      readonly: true # Frontier
     - type: LogProbeCartridge
     - type: GuideHelp
       guides:
