--- a/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
+++ b/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
@@ -29,7 +29,7 @@
             StationTrafficController: [ 1, 1 ]
             SecurityGuard: [ 1, 1 ]
             Valet: [ 1, 1 ]
-            Janitor: [ 1, 1 ]
+            NFJanitor: [ 1, 1 ]
             MailCarrier: [ 1, 1 ]
 # Others:
 #            Borg: [ 0, 0 ]
