--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -588,6 +588,39 @@
     board: NfsdTechFabCircuitboard
 
 - type: entity
+  id: NatoTechFab
+  parent: [ BlueprintReceiverBase, BaseLatheLube ]
+  name: tsf techfab
+  description: Prints NATO Standard Issue Equipment for the TSF
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Machines/techfab.rsi
+    layers:
+    - state: icon
+      map: ["enum.LatheVisualLayers.IsRunning"]
+    - state: nato
+    - state: unlit
+      shader: unshaded
+      map: ["enum.PowerDeviceVisualLayers.Powered"]
+    - state: inserting
+      map: ["enum.MaterialStorageVisualLayers.Inserting"]
+    - state: panel
+      map: ["enum.WiresVisualLayers.MaintenancePanel"]
+  - type: Machine
+    board: NatoTechFabCircuitboard
+  - type: Lathe
+    idleState: icon
+    runningState: icon
+  - type: MaterialStorage
+    whitelist:
+      tags:
+      - Sheet
+      - RawMaterial
+      - Ingot
+      - Metal
+      - Plastic
+
+- type: entity
   id: MercenaryTechFab
   parent: [ BlueprintReceiverBase, BaseLatheLube ]
   name: mercenary techfab
@@ -1194,25 +1227,3 @@
     - NFBlueprintPortableRecharger
     - BlueprintClothingOuterHardsuitScaf
   - type: RequireProjectileTarget
-
-- type: entity
-  id: NATOTechFab
-  parent: [ BlueprintReceiverBase, BlueprintReceiverBase ]
-  name: tsf techfab
-  description: Prints NATO Standard Issue Equipment for the TSF
-  components:
-  - type: Sprite
-    sprite: _NF/Structures/Machines/techfab.rsi
-    layers:
-    - state: icon
-      map: ["enum.LatheVisualLayers.IsRunning"]
-    - state: nato
-    - state: unlit
-      shader: unshaded
-      map: ["enum.PowerDeviceVisualLayers.Powered"]
-    - state: inserting
-      map: ["enum.MaterialStorageVisualLayers.Inserting"]
-    - state: panel
-      map: ["enum.WiresVisualLayers.MaintenancePanel"]
-  - type: Machine
-    board: NatoTechFabCircuitboard
